--- a/Example/kMusicSwift/Base.lproj/Main.storyboard
+++ b/Example/kMusicSwift/Base.lproj/Main.storyboard
@@ -96,7 +96,7 @@
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="HWc-KG-dx3">
                                 <rect key="frame" x="6" y="37" width="363" height="31"/>
                                 <connections>
-                                    <action selector="onSeekChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="pOO-s3-nFX"/>
+                                    <action selector="onSeekChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="bsW-71-vW2"/>
                                 </connections>
                             </slider>
                         </subviews>
